<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="blacklist_line3">%1$s (%2$s)</string>
    <string name="about_4pda_post_summary">Modification post on 4PDA</string>
    <string name="about_4pda_post_title">Post on 4PDA</string>
    <string name="about_4pda_topic_summary">Discussion of Aurora on 4PDA</string>
    <string name="about_4pda_topic_title">Topic on 4PDA</string>
    <string name="about_aurora_store_subtitle">Learn more about Aurora Store</string>
    <string name="about_aurora_store_summary">Aurora Store enables you to search and download apps from the official Google Play store. You can check app descriptions, screenshots, updates, other users\' comments, and download the APK directly from Google Play to your device. To use Aurora Store, you need to have a Google Play account, and log in to your Google Play account when you first open and configure Aurora Store.\n\nUnlike a traditional app store, Aurora Store does not own, license or distribute any apps. All the apps, app descriptions, screenshots and other content in Aurora Store are directly accessed, downloaded and/or displayed from Google Play. Aurora Store works exactly like a door or a browser, allowing you to log in to your Google Play account and find the apps from Google Play.\n\nPlease note that Aurora Store does not have any approval, sponsorship or authorization from Google, Google Play, any apps downloaded through Aurora Store or any app developers; neither does Aurora Store have any affiliation, cooperation or connection with them.</string>
    <string name="about_aurora_store_title">About Aurora Store</string>
    <string name="about_desc">A client that allows you to download applications from the Play Store.</string>
    <string name="about_github_summary">Modification source code.</string>
    <string name="about_github_title" translatable="false">GitHub</string>
    <string name="about_label_end" translatable="false">@string/app_label_crimson</string>
    <string name="about_label_start" translatable="false">@string/app_label_short</string>
    <string name="about_moddify" translatable="false">Powered moddify by ThIsLinked aka Roser // dhwh</string>
    <string name="about_telegram_summary">Join the Aurora Support group for discussions or suggestions.</string>
    <string name="about_telegram_title" translatable="false">@string/sample_telegramLabel</string>
    <string name="about_version" translatable="false">v4.5.1 (60) // Nightly by 15.08.24</string>
    <string name="access_denied_using_vpn">Access denied. Do you use VPN or other spoofing tools?</string>
    <string name="account_anonymous">Anonymous</string>
    <string name="account_anonymous_email" translatable="false">anonymous@gmail.com</string>
    <string name="account_google">Google</string>
    <string name="account_login_using">Log in using</string>
    <string name="account_logout">Log out from Aurora</string>
    <string name="action_back">Back</string>
    <string name="action_blacklist">Blacklist</string>
    <string name="action_blacklist_add">Add to Blacklist</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_check">Check</string>
    <string name="action_clear">Clear</string>
    <string name="action_close">Close</string>
    <string name="action_copy">Copy</string>
    <string name="action_copy_link">Copy Link</string>
    <string name="action_disable">Disable</string>
    <string name="action_enable">Enable</string>
    <string name="action_enabled">Enabled</string>
    <string name="action_export">Export</string>
    <string name="action_favourite">Favourite</string>
    <string name="action_filter">Filters</string>
    <string name="action_filter_all">All</string>
    <string name="action_filter_apply">Apply</string>
    <string name="action_filter_apps_with_ads">Apps with ads</string>
    <string name="action_filter_downloads">Downloads</string>
    <string name="action_filter_gsf_dependent_apps">GSF dependent</string>
    <string name="action_filter_misc">Misc</string>
    <string name="action_filter_paid_apps">Paid</string>
    <string name="action_filter_rating">Ratings</string>
    <string name="action_finish">Finish</string>
    <string name="action_get_local_apk">Save App bundle</string>
    <string name="action_grant">Grant</string>
    <string name="action_granted">Granted</string>
    <string name="action_ignore">Ignore</string>
    <string name="action_ignore_version">Ignore version</string>
    <string name="action_import">Import</string>
    <string name="action_info">App Info</string>
    <string name="action_install">Install</string>
    <string name="action_installations">Installations</string>
    <string name="action_installing">Installing</string>
    <string name="action_join">Join</string>
    <string name="action_later">Later</string>
    <string name="action_leave">Leave</string>
    <string name="action_logout">Log out</string>
    <string name="action_logout_confirmation_message">Are you sure you want to log out?</string>
    <string name="action_logout_confirmation_title">Log out?</string>
    <string name="action_manage">Manage</string>
    <string name="action_next">Next</string>
    <string name="action_ok">Okay</string>
    <string name="action_open">Open</string>
    <string name="action_pause">Pause</string>
    <string name="action_pending">Pending</string>
    <string name="action_post">Post</string>
    <string name="action_request_analysis">Request new analysis</string>
    <string name="action_restart">Restart</string>
    <string name="action_resume">Resume</string>
    <string name="action_search">Search</string>
    <string name="action_share">Share</string>
    <string name="action_uninstall">Uninstall</string>
    <string name="action_uninstall_confirmation">Do you want to uninstall this app ?</string>
    <string name="action_uninstall_success">Successfully uninstalled</string>
    <string name="action_update">Update</string>
    <string name="action_update_all">Update all</string>
    <string name="action_whitelist">Whitelist</string>
    <string name="action_wishlist_add">Add to wishlist</string>
    <string name="add">Add</string>
    <string name="add_dispenser_error">Invalid URL</string>
    <string name="add_dispenser_hint">Dispenser URL</string>
    <string name="add_dispenser_summary">Add a token dispenser to Aurora Store. Token dispensers provide account credentials to Aurora Store for logging in anonymously.</string>
    <string name="add_dispenser_title">Add dispenser</string>
    <string name="am_installer_desc">App Manager is required. And root or ADB permissions if MUIU optimization is enabled.</string>
    <string name="am_installer_subtitle">Installs using a third-party installer.</string>
    <string name="amazon_appstore_desc">Amazon Appstore is an app store for Android-compatible platforms operated by Amazon.</string>
    <string name="android_market_desc">Android Market was an online store offering software applications designed for Android devices, retired in 2017.</string>
    <string name="app_label" translatable="false">Aurora Store Crxmson</string>
    <string name="app_label_crimson" translatable="false">Crxmson</string>
    <string name="app_label_launcher" translatable="false">Aurora Store</string>
    <string name="app_label_short" translatable="false">@string/app_label_launcher</string>
    <string name="app_language">App Language</string>
    <string name="app_link_amazon_appstore" translatable="false">www.amazon.com</string>
    <string name="app_link_android_market" translatable="false">market.android.com</string>
    <string name="app_link_enabled">App link enabled!</string>
    <string name="app_link_play_store" translatable="false">play.google.com</string>
    <string name="app_list_rating" translatable="false">%1$s • %2$s★ • %3$s</string>
    <string name="app_updater_service_notif_text">Enables background app download</string>
    <string name="app_updater_service_notif_title">Background app download</string>
    <string name="app_versionName" translatable="false">4.5.1-nightly-240812 (by ThIsLinked // dhwh)</string>
    <string name="app_view_rating" translatable="false">%1$s • %2$s★</string>
    <string name="bad_request">Failed to request a session.<i>Try again</i> or try again later.</string>
    <string name="categoryapps_notFound">Nothing was found for this category…</string>
    <string name="check_connectivity">Check internet connectivity</string>
    <string name="check_updates">Check for updates</string>
    <string name="details_appinfo_line3" translatable="false">%1$s (%2$d)</string>
    <string name="details_appinfo_line3_update" translatable="false">%1$s ➔ %2$s (%3$d)</string>
    <string name="details_beta">Beta program</string>
    <string name="details_beta_available">Join beta program ?</string>
    <string name="details_beta_delay">Enrollment may take some time, you can check status later.</string>
    <string name="details_beta_description">You will see new features and bugs before the public does. Give your feedback to developers to help them improve.</string>
    <string name="details_beta_subscribed">You\'re a beta tester</string>
    <string name="details_changelog">Changelog</string>
    <string name="details_changelog_unavailable">Changelog not provided</string>
    <string name="details_contains_ads">Contains Ads</string>
    <string name="details_data_safety_subtitle">Data privacy and security practices declared by developer.</string>
    <string name="details_privacy">Privacy</string>
    <string name="device_doze_description">Please, disable battery optimizations to allow background operations.</string>
    <string name="device_doze_extra">Optionally you can choose to keep the optimizations enabled, but then you won\'t be able to take benefit of background downloads and automated updates, so choice is yours.</string>
    <string name="device_doze_subtitle">Aurora Store can not install download or update apps in background due to battery optimizations.</string>
    <string name="device_doze_title">Battery optimizations detected!</string>
    <string name="exodus_powered">Powered by Exodus Privacy</string>
    <string name="exodus_progress">Checking for trackers…</string>
    <string name="pref_app_download">Downloads</string>
    <string name="pref_aurora_only">Aurora Store apps only</string>
    <string name="pref_aurora_only_desc">Show only Aurora Store installed apps in Updates and Installed apps</string>
    <string name="pref_category_filters">Filters</string>
    <string name="pref_category_interface">Interface</string>
    <string name="pref_filter_fdroid_summary">Ignore F-Droid apps from Updates and Installed apps</string>
    <string name="pref_filter_fdroid_title">Filter F-Droid apps</string>
    <string name="pref_filter_google_summary">Ignore Google apps from Updates and Installed apps</string>
    <string name="pref_filter_google_title">Filter Google apps</string>
    <string name="pref_network_title">Networking</string>
    <string name="pref_ui_accent_title">Accent</string>
    <string name="pref_ui_layout_tab">Select default tab</string>
    <string name="pref_ui_no_for_you">For You Pages</string>
    <string name="pref_ui_no_for_you_desc">Display For You Pages on home screen</string>
    <string name="pref_ui_similar_apps">Similar and related apps</string>
    <string name="pref_ui_similar_apps_desc">Display similar and related clusters on app details page</string>
    <string name="pref_ui_theme_title">Theme</string>
    <string name="pref_ui_title">Customization</string>
    <string name="title_app_settings">System settings</string>
    <string name="title_download_manager">Downloads</string>
    <string name="title_manual_download">Manual download</string>
    <string name="title_open_external">Open externally</string>
</resources>