<?xml version="1.0" encoding="utf-8"?><!--
  ~ Aurora Store
  ~  Copyright (C) 2021, Rahul Kumar Patel <whyorean@gmail.com>
  ~
  ~  Aurora Store is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 2 of the License, or
  ~  (at your option) any later version.
  ~
  ~  Aurora Store is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with Aurora Store.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/exodus_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="?android:listPreferredItemPaddingStart"
    android:orientation="vertical">

    <com.aurora.store.view.custom.layouts.ActionHeaderLayout
        android:id="@+id/header_privacy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:headerSubtitle="@string/exodus_powered"
        app:headerTitle="@string/details_privacy" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txt_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?android:listPreferredItemPaddingStart"
        android:text="@string/exodus_progress"
        android:textAppearance="@style/TextAppearance.Aurora.Line1"
        android:textStyle="italic" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_request_analysis"
        style="@style/Widget.Material3.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginVertical="?android:listPreferredItemPaddingStart"
        android:text="@string/action_request_analysis"
        app:cornerRadius="@dimen/margin_small" />

</androidx.appcompat.widget.LinearLayoutCompat>
