<?xml version="1.0" encoding="utf-8"?><!--
  ~ Aurora Store
  ~  Copyright (C) 2021, Rahul Kumar Patel <whyorean@gmail.com>
  ~
  ~  Aurora Store is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 2 of the License, or
  ~  (at your option) any later version.
  ~
  ~  Aurora Store is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with Aurora Store.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->
<androidx.preference.PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.preference.Preference
        app:icon="@drawable/ic_ui"
        app:iconSpaceReserved="false"
        app:key="pref_ui"
        app:layout="@layout/item_preference"
        app:singleLineTitle="false"
        app:title="@string/pref_ui_title" />

    <androidx.preference.Preference
        app:icon="@drawable/ic_download_manager"
        app:iconSpaceReserved="false"
        app:key="pref_download"
        app:layout="@layout/item_preference"
        app:singleLineTitle="false"
        app:title="@string/pref_app_download" />

    <androidx.preference.Preference
        app:icon="@drawable/ic_network"
        app:iconSpaceReserved="false"
        app:key="pref_network"
        app:layout="@layout/item_preference"
        app:singleLineTitle="false"
        app:title="@string/pref_network_title" />

</androidx.preference.PreferenceScreen>
